Fixed responsive bug on tablet view.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8269,9 +8269,6 @@ small {
   .logo img {
     margin: 1rem auto;
     max-width: 192px; }
-    @media only screen and (min-width: 768px) {
-      .logo img {
-        max-width: 25.5%; } }
     @media only screen and (min-width: 992px) {
       .logo img {
         width: 24rem; } }
@@ -8288,6 +8285,9 @@ small {
       height: 13rem; } }
   .navbar-default .navbar-header {
     height: 6rem; }
+    @media only screen and (min-width: 768px) {
+      .navbar-default .navbar-header {
+        float: none; } }
     @media only screen and (min-width: 992px) {
       .navbar-default .navbar-header {
         display: block;
@@ -8319,9 +8319,6 @@ small {
     overflow-y: scroll;
     opacity: 0.96;
     margin-top: 0; }
-    @media only screen and (min-width: 768px) {
-      .navbar-default .navbar-collapse {
-        margin-top: 1.1rem; } }
     @media only screen and (min-width: 992px) {
       .navbar-default .navbar-collapse {
         background-color: #ffffff;
