--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -13,6 +13,9 @@
 
     .navbar-header {
         height: 6rem;
+        @include screen ('tablet') {
+            float: none;
+        }
         @include screen ('laptop') {
             display: block;
             float: none;
@@ -55,11 +58,7 @@
         max-height: 46rem;
         overflow-y: scroll;
         opacity: 0.96;
-        //margin-top: 1.1rem;
         margin-top: 0;
-        @include screen ('tablet') {
-            margin-top: 1.1rem;
-        }
         @include screen ('laptop') {
             background-color: $white;
             margin-top: 0;
